Fix - Vertical alignment of checkbox in Firefox

--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -111,6 +111,7 @@
   }
 
   input[type='checkbox'] {
+    align-self: flex-start;
     margin-top: 0.4rem;
   }
 }
